deployments/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serdar-react-sampleui-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serdar-react-sampleui
  template:
    metadata:
      labels:
        app: serdar-react-sampleui
      annotations:
        linkerd.io/inject: disabled
    spec:
      containers:
        - name: serdar-react-sampleui
          image: gcr.io/bubbly-yeti-377212/serdar-react-sampleui:3
          args: []
      terminationGracePeriodSeconds: 30
