deployments/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: serdar-react-sampleui-svc
  namespace: default
spec:
  selector:
    app: serdar-react-sampleui
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
